--- a/example/locales/active.en.json
+++ b/example/locales/active.en.json
@@ -5,6 +5,9 @@
   "Hello": {
     "other": "Hello"
   },
+  "Greet": {
+    "other": "Hello, {{ .Name }}"
+  },
   "WelcomeMessage": {
     "other": "Welcome to Seatbelt. This is a sample application that shows off all the framework can do."
   },
